--- a/package.json
+++ b/package.json
@@ -6,51 +6,10 @@
   "cordova": {
     "id": "cordova-plugin-inappbrowser",
     "platforms": [
-      "android",
-      "browser",
-      "ios",
-      "osx",
-      "windows"
+      "android"
     ]
   },
-  "repository": "github:apache/cordova-plugin-inappbrowser",
-  "bugs": "https://github.com/apache/cordova-plugin-inappbrowser/issues",
-  "keywords": [
-    "cordova",
-    "in",
-    "app",
-    "browser",
-    "inappbrowser",
-    "ecosystem:cordova",
-    "cordova-android",
-    "cordova-browser",
-    "cordova-ios",
-    "cordova-osx",
-    "cordova-windows"
-  ],
-  "scripts": {
-    "test": "npm run lint",
-    "lint": "eslint ."
-  },
-  "engines": {
-    "cordovaDependencies": {
-      "0.2.3": {
-        "cordova": ">=3.1.0"
-      },
-      "4.0.0": {
-        "cordova": ">=3.1.0",
-        "cordova-ios": ">=4.0.0"
-      },
-      "5.0.0": {
-        "cordova-android": ">=9.0.0",
-        "cordova-ios": ">=6.0.0",
-        "cordova": ">=9.0.0"
-      },
-      "6.0.0": {
-        "cordova": ">100"
-      }
-    }
-  },
+  "keywords": [],
   "author": "Apache Software Foundation",
   "license": "Apache-2.0",
   "devDependencies": {
